<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo3"
    tools:context="com.example.sergio.blackjack.Menu">


        <TextView
            android:id="@+id/buttonText1"
            android:layout_width="@dimen/button_menu_width"
            android:layout_height="@dimen/button_menu_height"
            android:gravity="center"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/button_menu_margin"
            android:background="@android:color/transparent"
            android:text="@string/string_counter"
            android:textColor="#000000"
            android:textSize="@dimen/text_menu_size" />
        <TextView
            android:id="@+id/buttonText2"
            android:background="@android:color/transparent"
            android:layout_width="@dimen/button_menu_width"
            android:layout_height="@dimen/button_menu_height"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/string_trainer"
            android:textColor="#000000"
            android:textSize="@dimen/text_menu_size"/>
        <TextView
            android:id="@+id/buttonText3"
            android:background="@android:color/transparent"
            android:layout_width="@dimen/button_menu_width"
            android:layout_height="@dimen/button_menu_height"
            android:gravity="center"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_menu_margin"
            android:text="@string/string_how"
            android:textColor="#000000"
            android:textSize="@dimen/text_menu_size"/>


        <ImageButton
            android:id="@+id/button1"
            android:background="@drawable/button_large"
            android:layout_width="@dimen/button_menu_width"
            android:layout_height="@dimen/button_menu_height"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/button_menu_margin"/>
        <ImageButton
            android:id="@+id/button2"
            android:background="@drawable/button_large"
            android:layout_width="@dimen/button_menu_width"
            android:layout_height="@dimen/button_menu_height"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:id="@+id/button3"
            android:background="@drawable/button_large"
            android:layout_width="@dimen/button_menu_width"
            android:layout_height="@dimen/button_menu_height"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_menu_margin"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-8901700829116269/3352593322">
        </com.google.android.gms.ads.AdView>


</RelativeLayout>

